# doomgeneric-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: game.rs  input.rs  lib.rs
