[package]
name = "doomgeneric"
version = "0.3.0-beta.3"
edition = "2018"
description = "Bindings for the doomgeneric doom port."
authors = ["Linus <linus@cosmos-ink.net"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/LinusCDE/doomgeneric-rs"
homepage = "https://crates.io/crates/doomgeneric"
categories = [ "external-ffi-bindings", "rendering" ]
keywords = [ "doom", "ffi", "game" ]

[dependencies]
once_cell = "1"

[build-dependencies]
cc = "1.0"
